CommandSigns v2.0.0
    Change base package to be.nokorbis
    Rewrite the whole code to make it easier to add feature for other plugin developers
    The menu has changed a bit but brings a new feature : It can now be clicked on !
    The data format has changed. You thus need to use the updater to convert old data to new data format

CommandSigns v1.6.8
    Support of Spigot v1.13

CommandSigns v1.6.7
    Clear recipients of chat to avoid players to see the chat menu responses.

CommandSigns v1.6.6
    Reset global cooldown a little bit later to avoid incompatibility with timer

CommandSigns v1.6.5
    Check requirements before the wait time

CommandSigns v1.6.4
    Load My_Worlds before CommandSign to handle multiple worlds

CommandSigns v1.6.2
    Fix permission being removed before commands are executed.

CommandSigns v1.6.1
    Should fix potential concurrent modification exception
    Default error message updated to "help" instead of "?"
    Added "ahcs" aliases. People don't care

CommandSigns v1.6.0
    Add the possibility to delay between commands using ` followed by the number of seconds
    Use world's name instead of world uuid by default (but world uuid is still supported)
    Add the possibility to disable a command sign.

CommandSigns v1.5.5
    Cooldowns (global and per users) can now support bigger numbers
    Player usage cooldown should now display properly

CommandSigns v1.5.4
    Remove bypass permissions from ops default

CommandSigns v1.5.3
    Rename CommandSign to CommandSigns
    Add bcs (For Bendercraft Command Signs) alias
    Check : https://github.com/Nokorbis/ar-command-signs/wiki/Updates

CommandSign v1.5.2
    Switch to maven.
    Rename the packages to 'bendercraft' (new server name)
    /!\ Change the name of the plugin. (From 'CommandSign' to 'CommandSigns')

CommandSign v1.5.1
    Add colors in the language file (and reformat languages entries)

CommandSign v1.5.0
    No more support for savefiles before 1.4.0